--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,37 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 100vh;
+    align-items: center;
+    margin: auto;
+    font-family: monospace;
+    background: url("./images/bg.jpg") center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 button {
     font-size: 20px;
     padding: 0.75em 1.75em;
-    background-color: rgb(43, 192, 197);
+    background-color: rgba(223, 220, 221, 0.9);
     border-radius: 10px;
     border: none;
-    color: #fff;
+    color: #e1306c;
     cursor: pointer;
     margin: 3em 0;
+    box-shadow: 10px 20px 50px #9046a3;
+}
+button:hover {
+    background-color: rgba(223, 220, 221, 0.7);
+
+    box-shadow: 10px 20px 50px #9046a3;
+}
+.profile {
+    border-radius: 8px;
+    padding: 3em;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: rgb(219, 219, 214);
+    backdrop-filter: blur(10px);
+    height: 500px;
+    width: 400px;
 }
